# qd-archive-seeds

./: .gitignore  LICENSE  README.md  pyproject.toml  test.py
.github/workflows/: ci.yml
configs/: hannover_transens.yaml  harvard_dataverse.yaml  logging.yaml  my_zenodo.yaml  reference_descriptions.yaml  syracuse_qdr.yaml
configs/examples/: auth_api.yaml  harvard_dataverse.yaml  syracuse_qdr.yaml  zenodo.yaml
docs/: QDA File Extensions Formats - Overview.csv  Qualitative Data Repositories - Sheet1.csv  Qualitative Data Repositories.xlsx  SQLite Meta Data Database Schema.xlsx
metadata/: qdarchive.sqlite
scripts/: disk_guard.sh
src/qdarchive_seeding/: __init__.py
src/qdarchive_seeding/app/: asset_processing.py  checkpoint.py  config_loader.py  config_models.py  container.py  download_strategy.py  manifests.py  policies.py  progress.py  registry.py  runner.py
src/qdarchive_seeding/cli/: __init__.py  display.py  main.py  prompts.py
tests/: conftest.py
tests/fixtures/: zenodo_response.json
tests/integration/: test_pipeline_csv.py  test_pipeline_sqlite.py
tests/unit/: test_auth.py  test_checkpoint.py  test_checksums.py  test_cli.py  test_config_loader.py  test_container.py  test_downloader.py  test_extractors.py  test_harvard_dataverse_retry.py  test_http_client.py  test_logging.py  test_manifests.py  test_pagination.py  test_paths.py  test_policies.py  test_progress.py  test_registry.py  test_runner.py  test_sinks_csv.py  test_sinks_excel.py  test_sinks_mysql_mongo.py  test_sinks_sqlite.py  test_transforms.py  test_zenodo_retry.py  test_zip_safety.py
(+94 files in other folders)
